Improving the add location form to consist of multiple steps. This makes the geocoding search usable on mobile. Fixes #51

--- a/app/less/master.less
+++ b/app/less/master.less
@@ -52,12 +52,6 @@
     font-size: 10px;
 }
 
-// Forms
-// TODO: get rid of this, make proper bootstrap forms instead
-.spaced-form > * {
-    margin-bottom: 5px;
-}
-
 // Team button if no team is defined (black)
 .btn-team {
     .button-variant(#fff; #333; darken(#333, 5%));
